pysmb-1.1.5, 19 June 2013
=========================

- Adds support for Direct hosting of SMB over TCP/IP (TCP port: 445)

pysmb-1.1.4, 31 May 2013
========================

- Improve query performance for query IP addresses for NetBIOS names in
  NetBIOSProtocol.py
- Fix bugs in SMBConnection when sending large data packets can result in
  AssertionError.

pysmb-1.1.3, 18 Mar 2013
========================

- Fix bug which results in endless loop in SMBConnection when remote CIFS
  server closes the connection.

pysmb-1.1.2, 28 Sep 2012
========================

- Improve queryIPForName() in nmb.NetBIOS and nmb.NBNSProtocol class to
  return only server machine name and ignore workgroup names.

pysmb-1.1.1, 9 June 2012
========================

- Adds support for Python3. Noted that the Python3 SMB/NMB protocol implementations
  for Twisted are not well-tested as Twisted (as of v12.1) is not Python3 ready yet.
- Adds support for retrieving list of shadow copies (also known as
  "previous versions" in Windows). Note that not all Windows editions support shadow
  copies.


pysmb-1.1.0, 1 June 2012
========================

- Adds SMB2 protocol implementation with signing for outgoing SMB2 messages.
  pysmb will utilize SMB2 protocol with servers that support SMB2
  (eg. Windows Vista, Windows 7 and Samba 3).
  If the remote server does not support SMB2, pysmb will fall back automatically
  to using SMB1 protocol.


pysmb-1.0.5, 7 May 2012
=======================

- Add supports for SMB message signing. pysmb will sign all SMB messages from
  the CIFS client to the server, but it does not verify the signatures of the
  SMB messages from the server.


pysmb-1.0.4, 1 May 2012
=======================

- Adds support for "smb://" URL in urllib2 python packages to retrieve or upload
  files from/to remote CIFS servers.
- Improve documentation


pysmb-1.0.3, 28 April 2012
===========================
